Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -88,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 113,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:20:59.395863Z",
-     "start_time": "2019-06-18T01:20:59.350665Z"
+     "end_time": "2019-06-18T01:25:50.522783Z",
+     "start_time": "2019-06-18T01:25:50.473915Z"
     },
     "code_folding": [
      47,
@@ -149,8 +149,8 @@
     "        grad_neg_mean = tf.reduce_sum(grad_neg*grad)/tf.reduce_sum(grad_neg)\n",
     "        \n",
     "        grad_between    = tf.where(grad_neg_mean<grad,tf.ones_like(grad),tf.zeros_like(grad)) * tf.where(grad_pos_mean>grad,tf.ones_like(grad),tf.zeros_like(grad))\n",
-    "        grad_sign_chage = grad_between     * grad * -1\n",
-    "        grad_sign_keep  = (1-grad_between) * grad\n",
+    "        grad_sign_chage = grad_between     * grad *  1\n",
+    "        grad_sign_keep  = (1-grad_between) * grad * -1\n",
     "        \n",
     "        grad_new = grad_sign_chage + grad_sign_keep\n",
     "        \n",
@@ -245,37 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:20:59.714958Z",
-     "start_time": "2019-06-18T01:20:59.600248Z"
+     "start_time": "2019-06-18T01:25:51.194Z"
     }
    },
    "outputs": [],
-   "source": [
-    "! start ."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-06-18T01:21:11.125700Z",
-     "start_time": "2019-06-18T01:20:59.875415Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(5000, 96, 96, 3) (5000, 10) -11.595098265964817 15.777090090299724\n",
-      "(8000, 96, 96, 3) (8000, 10) -10.553357891447178 22.92614277238906\n"
-     ]
-    }
-   ],
    "source": [
     "# load the data\n",
     "x_train,y_train = read_all_images('../Dataset/STL10/stl10_binary/train_x.bin'),read_labels('../Dataset/STL10/stl10_binary/train_y.bin')\n",
@@ -295,11 +271,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:21:11.196510Z",
-     "start_time": "2019-06-18T01:21:11.191561Z"
+     "start_time": "2019-06-18T01:25:51.375Z"
     }
    },
    "outputs": [],
@@ -312,24 +287,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:21:11.454638Z",
-     "start_time": "2019-06-18T01:21:11.252362Z"
+     "start_time": "2019-06-18T01:25:51.604Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\ProgramData\\Miniconda3\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# declare layer\n",
     "avg_acc_train = 0; avg_acc_test  = 0; train_acc = [];test_acc = []\n",
@@ -350,11 +314,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:21:12.208591Z",
-     "start_time": "2019-06-18T01:21:11.512448Z"
+     "start_time": "2019-06-18T01:25:51.822Z"
     }
    },
    "outputs": [],
@@ -403,23 +366,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:21:12.415050Z",
-     "start_time": "2019-06-18T01:21:12.261486Z"
+     "start_time": "2019-06-18T01:25:52.063Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\tensorflow\\python\\client\\session.py:1702: UserWarning: An interactive session is already active. This can cause out-of-memory errors in some cases. You must explicitly call `InteractiveSession.close()` to release resources held by the other session(s).\n",
-      "  warnings.warn('An interactive session is already active. This can '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# start the session\n",
     "sess = tf.InteractiveSession(config=tf.ConfigProto(log_device_placement=True))\n",
@@ -428,51 +381,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:25:13.455653Z",
-     "start_time": "2019-06-18T01:21:12.468897Z"
+     "start_time": "2019-06-18T01:25:52.429Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current: 1\tTrain Acc: 0.18579999975860118\tTrain Cost: 2.158721383810043\tTest Acc: 0.22550000073388218\tTest Cost: 1.9806409940123557\tLR: 0.0008\n",
-      "Current: 2\tTrain Acc: 0.26839999951422217\tTrain Cost: 1.9222579681873322\tTest Acc: 0.298250000551343\tTest Cost: 1.8465021438896656\tLR: 0.0008\n",
-      "Current: 3\tTrain Acc: 0.3216000011563301\tTrain Cost: 1.795080337524414\tTest Acc: 0.34637500075623395\tTest Cost: 1.7438177734613418\tLR: 0.0008\n",
-      "Current: 4\tTrain Acc: 0.36620000049471857\tTrain Cost: 1.6968134725093842\tTest Acc: 0.3837499997578561\tTest Cost: 1.6646159686148168\tLR: 0.0008\n",
-      "Current: 5\tTrain Acc: 0.39599999994039536\tTrain Cost: 1.6449253618717194\tTest Acc: 0.39162500146776436\tTest Cost: 1.640199113637209\tLR: 0.0008\n",
-      "Current: 6\tTrain Acc: 0.41219999998807905\tTrain Cost: 1.583752999305725\tTest Acc: 0.3972500001080334\tTest Cost: 1.6245796881616115\tLR: 0.0008\n",
-      "Current: 7\tTrain Acc: 0.43199999958276747\tTrain Cost: 1.5479006886482238\tTest Acc: 0.3979999992065132\tTest Cost: 1.6023490451276303\tLR: 0.0008\n",
-      "Current: 8\tTrain Acc: 0.4295999994874001\tTrain Cost: 1.534543092250824\tTest Acc: 0.4133750003762543\tTest Cost: 1.5790651470422745\tLR: 0.0008\n",
-      "Current: 9\tTrain Acc: 0.4525999975204468\tTrain Cost: 1.4793607568740845\tTest Acc: 0.4318749990314245\tTest Cost: 1.5370066225528718\tLR: 0.0008\n",
-      "Current: 10\tTrain Acc: 0.45019999831914903\tTrain Cost: 1.4605844962596892\tTest Acc: 0.42274999963119625\tTest Cost: 1.5576063632965087\tLR: 0.0008\n",
-      "Current: 11\tTrain Acc: 0.4669999983906746\tTrain Cost: 1.4458532202243806\tTest Acc: 0.4259999990463257\tTest Cost: 1.5461960144340992\tLR: 0.0008\n",
-      "Current: 12\tTrain Acc: 0.4771999993920326\tTrain Cost: 1.4243351995944977\tTest Acc: 0.44274999797344206\tTest Cost: 1.5131035603582859\tLR: 0.0008\n",
-      "Current: 13\tTrain Acc: 0.4861999976634979\tTrain Cost: 1.3942467701435088\tTest Acc: 0.444624999165535\tTest Cost: 1.5181571446359157\tLR: 0.0008\n",
-      "Current: 14\tTrain Acc: 0.4923999962210655\tTrain Cost: 1.375604658126831\tTest Acc: 0.4543749986216426\tTest Cost: 1.497846996039152\tLR: 0.0008\n",
-      "Current: 15\tTrain Acc: 0.493400000333786\tTrain Cost: 1.35897496342659\tTest Acc: 0.44174999967217443\tTest Cost: 1.5187796495854855\tLR: 0.0008\n",
-      "Current: 16\tTrain Acc: 0.5022000002861023\tTrain Cost: 1.3365914511680603\tTest Acc: 0.46650000009685755\tTest Cost: 1.461505265533924\tLR: 0.0008\n",
-      "Current: 17\tTrain Acc: 0.5000000005960464\tTrain Cost: 1.3298272132873534\tTest Acc: 0.46587499920278785\tTest Cost: 1.4768462412059307\tLR: 0.0008\n",
-      "Current: 18\tTrain Acc: 0.5247999987006188\tTrain Cost: 1.305471235513687\tTest Acc: 0.4612499985843897\tTest Cost: 1.4899793788790703\tLR: 0.0008\n",
-      "Current: 19\tTrain Acc: 0.511800000667572\tTrain Cost: 1.3146464383602143\tTest Acc: 0.4428749980404973\tTest Cost: 1.5364667065441608\tLR: 0.0008\n",
-      "Current: 20\tTrain Acc: 0.5138000017404556\tTrain Cost: 1.310493801832199\tTest Acc: 0.4583749998360872\tTest Cost: 1.4798161581158638\tLR: 0.0008\n",
-      "Current: 21\tTrain Acc: 0.527000000178814\tTrain Cost: 1.2909403491020202\tTest Acc: 0.4719999983906746\tTest Cost: 1.4625903323292733\tLR: 0.0008\n",
-      "Current: 22\tTrain Acc: 0.5300000044703483\tTrain Cost: 1.2778454500436782\tTest Acc: 0.4771249987185001\tTest Cost: 1.4506224781274795\tLR: 0.0008\n",
-      "Current: 23\tTrain Acc: 0.5126000002026558\tTrain Cost: 1.3064423787593842\tTest Acc: 0.47012499924749135\tTest Cost: 1.4691736049950124\tLR: 0.0008\n",
-      "Current: 24\tTrain Acc: 0.53\tTrain Cost: 1.272086724638939\tTest Acc: 0.4641249986365438\tTest Cost: 1.4820801559835672\tLR: 0.0008\n",
-      "Current: 25\tTrain Acc: 0.5472000035643577\tTrain Cost: 1.2412868732213973\tTest Acc: 0.4753749988041818\tTest Cost: 1.4724121436476707\tLR: 0.0008\n",
-      "Current: 26\tTrain Acc: 0.5416000014543534\tTrain Cost: 1.245195311307907\tTest Acc: 0.46399999782443047\tTest Cost: 1.463557492941618\tLR: 0.0008\n",
-      "Current: 27\tTrain Acc: 0.5418000015616417\tTrain Cost: 1.246935453414917\tTest Acc: 0.47037499900907276\tTest Cost: 1.4789953745901585\tLR: 0.0008\n",
-      "Current: 28\tTrain Acc: 0.5424000000953675\tTrain Cost: 1.2586309999227523\tTest Acc: 0.4779999997466803\tTest Cost: 1.452463871985674\tLR: 0.0008\n",
-      "Current: 29\tTrain Acc: 0.5466000002622604\tTrain Cost: 1.2291623890399932\tTest Acc: 0.4776249984279275\tTest Cost: 1.4454680487513543\tLR: 0.0008\n",
-      "Current: 30\tTrain Acc: 0.5470000007748603\tTrain Cost: 1.2384335911273956\tTest Acc: 0.47324999757111075\tTest Cost: 1.455143967270851\tLR: 0.0008\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# start the training \n",
     "for iter in range(1,num_epoch+1):\n",
