Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -245,13 +245,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T01:26:57.321Z"
+     "end_time": "2019-06-18T01:27:06.963279Z",
+     "start_time": "2019-06-18T01:26:57.406845Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5000, 96, 96, 3) (5000, 10) -11.595098265964817 15.777090090299724\n",
+      "(8000, 96, 96, 3) (8000, 10) -10.553357891447178 22.92614277238906\n"
+     ]
+    }
+   ],
    "source": [
     "# load the data\n",
     "x_train,y_train = read_all_images('../Dataset/STL10/stl10_binary/train_x.bin'),read_labels('../Dataset/STL10/stl10_binary/train_y.bin')\n",
@@ -271,10 +281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T01:26:57.552Z"
+     "end_time": "2019-06-18T01:27:07.256498Z",
+     "start_time": "2019-06-18T01:27:07.251524Z"
     }
    },
    "outputs": [],
@@ -287,10 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T01:26:57.863Z"
+     "end_time": "2019-06-18T01:27:07.711282Z",
+     "start_time": "2019-06-18T01:27:07.523781Z"
     }
    },
    "outputs": [],
@@ -387,7 +399,15 @@
      "start_time": "2019-06-18T01:26:59.089Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current: 1\tTrain Acc: 0.17599999975413083\tTrain Cost: 2.1822944676876066\tTest Acc: 0.22249999875202775\tTest Cost: 2.0996011488139628\tLR: 0.0008\n"
+     ]
+    }
+   ],
    "source": [
     "# start the training \n",
     "for iter in range(1,num_epoch+1):\n",
