Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -404,7 +404,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current: 1\tTrain Acc: 0.17599999975413083\tTrain Cost: 2.1822944676876066\tTest Acc: 0.22249999875202775\tTest Cost: 2.0996011488139628\tLR: 0.0008\n"
+      "Current: 1\tTrain Acc: 0.17599999975413083\tTrain Cost: 2.1822944676876066\tTest Acc: 0.22249999875202775\tTest Cost: 2.0996011488139628\tLR: 0.0008\n",
+      "Current: 2\tTrain Acc: 0.24879999995231628\tTrain Cost: 1.9815778517723084\tTest Acc: 0.2761250010225922\tTest Cost: 1.9548018597066403\tLR: 0.0008\n",
+      "Current: 3\tTrain Acc: 0.3022000003606081\tTrain Cost: 1.8637477374076843\tTest Acc: 0.32537500094622374\tTest Cost: 1.8205640316009521\tLR: 0.0008\n",
+      "Current: 4\tTrain Acc: 0.3306000003218651\tTrain Cost: 1.7996220350265504\tTest Acc: 0.3517500006593764\tTest Cost: 1.769098211824894\tLR: 0.0008\n",
+      "Current: 5\tTrain Acc: 0.3571999993920326\tTrain Cost: 1.716323722600937\tTest Acc: 0.36462500132620335\tTest Cost: 1.7264813154935836\tLR: 0.0008\n",
+      "Current: 6\tTrain Acc: 0.37560000002384186\tTrain Cost: 1.6739450573921204\tTest Acc: 0.37262500133365395\tTest Cost: 1.7080950886011124\tLR: 0.0008\n",
+      "Current: 7\tTrain Acc: 0.38799999967217447\tTrain Cost: 1.658386253118515\tTest Acc: 0.37037500077858565\tTest Cost: 1.691534235328436\tLR: 0.0008\n",
+      "Current: 8\tTrain Acc: 0.3975999990105629\tTrain Cost: 1.6420445811748505\tTest Acc: 0.38862500097602604\tTest Cost: 1.662305399775505\tLR: 0.0008\n",
+      "Current: 9\tTrain Acc: 0.4157999974489212\tTrain Cost: 1.5870026767253875\tTest Acc: 0.3804999998770654\tTest Cost: 1.6800612062215805\tLR: 0.0008\n",
+      "Current: 10\tTrain Acc: 0.42459999918937685\tTrain Cost: 1.5762607288360595\tTest Acc: 0.4059999991208315\tTest Cost: 1.6231034085154534\tLR: 0.0008\n",
+      "Current: 11\tTrain Acc: 0.4250000005960464\tTrain Cost: 1.5673620581626893\tTest Acc: 0.4127499990165234\tTest Cost: 1.6003320671617984\tLR: 0.0008\n",
+      "Current: 12\tTrain Acc: 0.4263999991118908\tTrain Cost: 1.5553125751018524\tTest Acc: 0.39524999968707564\tTest Cost: 1.6471827425062657\tLR: 0.0008\n",
+      "Current: 13\tTrain Acc: 0.4298000004887581\tTrain Cost: 1.5477730321884156\tTest Acc: 0.4033749989233911\tTest Cost: 1.6197672493755817\tLR: 0.0008\n",
+      "Current: 14\tTrain Acc: 0.4153999987244606\tTrain Cost: 1.5736851477622986\tTest Acc: 0.4076250011101365\tTest Cost: 1.612591166049242\tLR: 0.0008\n",
+      "Current: 15\tTrain Acc: 0.4337999990582466\tTrain Cost: 1.5245677351951599\tTest Acc: 0.40775000033900144\tTest Cost: 1.648069328069687\tLR: 0.0008\n",
+      "Current: 16\tTrain Acc: 0.4371999987959862\tTrain Cost: 1.5273077774047852\tTest Acc: 0.4138749990612268\tTest Cost: 1.6241446502506733\tLR: 0.0008\n",
+      "Current Iter : 17/30 batch : 1650/5000 acc : 0.42 cost : 1.6342263\r"
      ]
     }
    ],
