Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -245,13 +245,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T01:30:02.683Z"
+     "end_time": "2019-06-18T01:30:12.861900Z",
+     "start_time": "2019-06-18T01:30:02.685207Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5000, 96, 96, 3) (5000, 10) -11.595098265964817 15.777090090299724\n",
+      "(8000, 96, 96, 3) (8000, 10) -10.553357891447178 22.92614277238906\n"
+     ]
+    }
+   ],
    "source": [
     "# load the data\n",
     "x_train,y_train = read_all_images('../Dataset/STL10/stl10_binary/train_x.bin'),read_labels('../Dataset/STL10/stl10_binary/train_y.bin')\n",
@@ -271,10 +281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T01:30:03.068Z"
+     "end_time": "2019-06-18T01:30:13.132151Z",
+     "start_time": "2019-06-18T01:30:13.128163Z"
     }
    },
    "outputs": [],
@@ -287,10 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T01:30:03.370Z"
+     "end_time": "2019-06-18T01:30:13.560430Z",
+     "start_time": "2019-06-18T01:30:13.395447Z"
     }
    },
    "outputs": [],
@@ -387,7 +399,22 @@
      "start_time": "2019-06-18T01:30:04.416Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current: 1\tTrain Acc: 0.19559999957680702\tTrain Cost: 2.1409799218177796\tTest Acc: 0.27762499884702263\tTest Cost: 1.9061641797423363\tLR: 0.0008\n",
+      "Current: 2\tTrain Acc: 0.33500000163912774\tTrain Cost: 1.78861971616745\tTest Acc: 0.3726250001229346\tTest Cost: 1.6817388981580734\tLR: 0.0008\n",
+      "Current: 3\tTrain Acc: 0.3965999999642372\tTrain Cost: 1.6291186547279357\tTest Acc: 0.4117499995045364\tTest Cost: 1.5833801381289958\tLR: 0.0008\n",
+      "Current: 4\tTrain Acc: 0.4347999981045723\tTrain Cost: 1.5213914012908936\tTest Acc: 0.4377499992959201\tTest Cost: 1.51798485070467\tLR: 0.0008\n",
+      "Current: 5\tTrain Acc: 0.4780000001192093\tTrain Cost: 1.4308626174926757\tTest Acc: 0.4556249985471368\tTest Cost: 1.4759912744164467\tLR: 0.0008\n",
+      "Current: 6\tTrain Acc: 0.511599999666214\tTrain Cost: 1.3530434685945512\tTest Acc: 0.47649999912828206\tTest Cost: 1.4081824906170368\tLR: 0.0008\n",
+      "Current: 7\tTrain Acc: 0.5293999999761582\tTrain Cost: 1.2989896112680435\tTest Acc: 0.48274999875575303\tTest Cost: 1.4063894897699356\tLR: 0.0008\n",
+      "Current Iter : 8/30 batch : 5700/8000 acc : 0.54 cost : 1.28170965\r"
+     ]
+    }
+   ],
    "source": [
     "# start the training \n",
     "for iter in range(1,num_epoch+1):\n",
