Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -394,6 +394,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# start the training \n",
+    "for iter in range(1,num_epoch+1):\n",
+    "    for current_batch_index in range(0,len(x_train),batch_size):\n",
+    "        current_data  = x_train[current_batch_index:current_batch_index+batch_size].astype(np.float32)\n",
+    "        current_label = y_train[current_batch_index:current_batch_index+batch_size].astype(np.float32)\n",
+    "        sess_results  = sess.run([accuracy,cost,grad_update],feed_dict={x:current_data,y:current_label,iter_num:iter})\n",
+    "        sys.stdout.write('Current Iter : '+str(iter)+'/'+ str(num_epoch)  + ' batch : ' + str(current_batch_index) + '/'+ str(len(x_train)) + ' acc : '+str(sess_results[0]) + ' cost : '+str(sess_results[1])+ '\\r')\n",
+    "        sys.stdout.flush(); \n",
+    "        avg_acc_train = avg_acc_train + sess_results[0]\n",
+    "        avg_lss_train = avg_lss_train + sess_results[1]\n",
+    "    for current_batch_index in range(0,len(x_test), batch_size):\n",
+    "        current_data  = x_test[current_batch_index:current_batch_index+batch_size].astype(np.float32)\n",
+    "        current_label = y_test[current_batch_index:current_batch_index+batch_size].astype(np.float32)\n",
+    "        sess_results  = sess.run([accuracy,cost],feed_dict={x:current_data,y:current_label,is_train:False})\n",
+    "        sys.stdout.write('Current Iter : '+str(iter)+'/'+ str(num_epoch)  + ' batch : ' + str(current_batch_index) + '/'+ str(len(x_test)) + ' acc : '+str(sess_results[0]) + ' cost : '+str(sess_results[1])+ '\\r')\n",
+    "        sys.stdout.flush(); \n",
+    "        avg_acc_test = avg_acc_test + sess_results[0]\n",
+    "        avg_lss_test = avg_lss_test + sess_results[1]\n",
+    "    # ======================== print reset ========================  \n",
+    "    print(\"Current: \"+ str(iter) + \n",
+    "          \"\\tTrain Acc: \"  + str(avg_acc_train/(len(x_train)/batch_size)) + \n",
+    "          \"\\tTrain Cost: \" + str(avg_lss_train/(len(x_train)/batch_size)) + \n",
+    "          \"\\tTest Acc: \"   + str(avg_acc_test/(len(x_test)/batch_size)) + \n",
+    "          \"\\tTest Cost: \"  + str(avg_lss_test/(len(x_test)/batch_size)) + \n",
+    "          \"\\tLR: \" + str(learning_rate) )\n",
+    "    avg_acc_train   = 0 ; avg_acc_test  = 0 ; avg_lss_train = 0 ; avg_lss_test  = 0\n",
+    "    x_train,y_train = shuffle(x_train,y_train); x_test,y_test   = shuffle(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2019-06-18T01:30:04.416Z"
@@ -411,7 +453,19 @@
       "Current: 5\tTrain Acc: 0.4780000001192093\tTrain Cost: 1.4308626174926757\tTest Acc: 0.4556249985471368\tTest Cost: 1.4759912744164467\tLR: 0.0008\n",
       "Current: 6\tTrain Acc: 0.511599999666214\tTrain Cost: 1.3530434685945512\tTest Acc: 0.47649999912828206\tTest Cost: 1.4081824906170368\tLR: 0.0008\n",
       "Current: 7\tTrain Acc: 0.5293999999761582\tTrain Cost: 1.2989896112680435\tTest Acc: 0.48274999875575303\tTest Cost: 1.4063894897699356\tLR: 0.0008\n",
-      "Current Iter : 8/30 batch : 5700/8000 acc : 0.54 cost : 1.28170965\r"
+      "Current: 8\tTrain Acc: 0.5502000004053116\tTrain Cost: 1.2369221717119216\tTest Acc: 0.4973749993368983\tTest Cost: 1.3722591437399387\tLR: 0.0008\n",
+      "Current: 9\tTrain Acc: 0.5585999986529351\tTrain Cost: 1.198109130859375\tTest Acc: 0.4938749995082617\tTest Cost: 1.3832597315311432\tLR: 0.0008\n",
+      "Current: 10\tTrain Acc: 0.5854000025987625\tTrain Cost: 1.150710431933403\tTest Acc: 0.5147499971091747\tTest Cost: 1.334352659061551\tLR: 0.0008\n",
+      "Current: 11\tTrain Acc: 0.597000002861023\tTrain Cost: 1.1155456137657165\tTest Acc: 0.5083749981597065\tTest Cost: 1.3523104198276996\tLR: 0.0008\n",
+      "Current: 12\tTrain Acc: 0.6068000030517579\tTrain Cost: 1.086259176135063\tTest Acc: 0.5162500012665987\tTest Cost: 1.3319330289959908\tLR: 0.0008\n",
+      "Current: 13\tTrain Acc: 0.6194000035524369\tTrain Cost: 1.0430400657653809\tTest Acc: 0.5240000002086163\tTest Cost: 1.3377283312380315\tLR: 0.0008\n",
+      "Current: 14\tTrain Acc: 0.6194000029563904\tTrain Cost: 1.0398136472702026\tTest Acc: 0.5225000012665987\tTest Cost: 1.3285104002803565\tLR: 0.0008\n",
+      "Current: 15\tTrain Acc: 0.6386000066995621\tTrain Cost: 0.9952584594488144\tTest Acc: 0.5328750003129243\tTest Cost: 1.3103054251521826\tLR: 0.0008\n",
+      "Current: 16\tTrain Acc: 0.6452000039815903\tTrain Cost: 0.9669962984323501\tTest Acc: 0.5408750016242265\tTest Cost: 1.3002511892467736\tLR: 0.0008\n",
+      "Current: 17\tTrain Acc: 0.6648000067472458\tTrain Cost: 0.9274542480707169\tTest Acc: 0.5448750022798776\tTest Cost: 1.2850014451891183\tLR: 0.0008\n",
+      "Current: 18\tTrain Acc: 0.6740000060200692\tTrain Cost: 0.9154990565776825\tTest Acc: 0.5206250008195639\tTest Cost: 1.3414748456329106\tLR: 0.0008\n",
+      "Current: 19\tTrain Acc: 0.6804000055789947\tTrain Cost: 0.8897434991598129\tTest Acc: 0.5491250013932586\tTest Cost: 1.2952396415174008\tLR: 0.0008\n",
+      "Current Iter : 20/30 batch : 2750/5000 acc : 0.76 cost : 0.71872383\r"
      ]
     }
    ],
