Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -465,7 +465,10 @@
       "Current: 17\tTrain Acc: 0.6648000067472458\tTrain Cost: 0.9274542480707169\tTest Acc: 0.5448750022798776\tTest Cost: 1.2850014451891183\tLR: 0.0008\n",
       "Current: 18\tTrain Acc: 0.6740000060200692\tTrain Cost: 0.9154990565776825\tTest Acc: 0.5206250008195639\tTest Cost: 1.3414748456329106\tLR: 0.0008\n",
       "Current: 19\tTrain Acc: 0.6804000055789947\tTrain Cost: 0.8897434991598129\tTest Acc: 0.5491250013932586\tTest Cost: 1.2952396415174008\tLR: 0.0008\n",
-      "Current Iter : 20/30 batch : 2750/5000 acc : 0.76 cost : 0.71872383\r"
+      "Current: 20\tTrain Acc: 0.6917999994754791\tTrain Cost: 0.8510694199800491\tTest Acc: 0.5347500015050173\tTest Cost: 1.3263955142349004\tLR: 0.0008\n",
+      "Current: 21\tTrain Acc: 0.6992000061273574\tTrain Cost: 0.8217468434572219\tTest Acc: 0.5432500045746564\tTest Cost: 1.3120289593935013\tLR: 0.0008\n",
+      "Current: 22\tTrain Acc: 0.7014000031352043\tTrain Cost: 0.83437579870224\tTest Acc: 0.54825000166893\tTest Cost: 1.3042089898139237\tLR: 0.0008\n",
+      "Current: 23\tTrain Acc: 0.7210000032186508\tTrain Cost: 0.7821512481570244\tTest Acc: 0.5452500009909272\tTest Cost: 1.3459082923829555\tLR: 0.0008\n"
      ]
     }
    ],
