Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -245,13 +245,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T01:33:36.706Z"
+     "end_time": "2019-06-18T01:33:46.263229Z",
+     "start_time": "2019-06-18T01:33:36.737353Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5000, 96, 96, 3) (5000, 10) -11.595098265964817 15.777090090299724\n",
+      "(8000, 96, 96, 3) (8000, 10) -10.553357891447178 22.92614277238906\n"
+     ]
+    }
+   ],
    "source": [
     "# load the data\n",
     "x_train,y_train = read_all_images('../Dataset/STL10/stl10_binary/train_x.bin'),read_labels('../Dataset/STL10/stl10_binary/train_y.bin')\n",
@@ -271,10 +281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T01:33:36.979Z"
+     "end_time": "2019-06-18T01:33:46.557443Z",
+     "start_time": "2019-06-18T01:33:46.552457Z"
     }
    },
    "outputs": [],
@@ -287,10 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T01:33:37.248Z"
+     "end_time": "2019-06-18T01:33:46.998508Z",
+     "start_time": "2019-06-18T01:33:46.819741Z"
     }
    },
    "outputs": [],
@@ -387,7 +399,26 @@
      "start_time": "2019-06-18T01:33:38.682Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current: 1\tTrain Acc: 0.17179999966174364\tTrain Cost: 2.4230112552642824\tTest Acc: 0.19699999960139394\tTest Cost: 2.290489925444126\tLR: 0.0008\n",
+      "Current: 2\tTrain Acc: 0.29680000215768815\tTrain Cost: 1.927799915075302\tTest Acc: 0.33575000138953326\tTest Cost: 1.8293024070560933\tLR: 0.0008\n",
+      "Current: 3\tTrain Acc: 0.36260000109672547\tTrain Cost: 1.756622267961502\tTest Acc: 0.37887500086799264\tTest Cost: 1.7275137439370156\tLR: 0.0008\n",
+      "Current: 4\tTrain Acc: 0.28620000030845405\tTrain Cost: 2.0657412242889404\tTest Acc: 0.24449999956414104\tTest Cost: 2.216640358418226\tLR: 0.0008\n",
+      "Current: 5\tTrain Acc: 0.3618000000715256\tTrain Cost: 1.7625536143779754\tTest Acc: 0.33325000032782554\tTest Cost: 1.8795228876173495\tLR: 0.0008\n",
+      "Current: 6\tTrain Acc: 0.3124000003188849\tTrain Cost: 2.0998847126960754\tTest Acc: 0.33312500030733644\tTest Cost: 1.8258410312235356\tLR: 0.0008\n",
+      "Current: 7\tTrain Acc: 0.39380000039935115\tTrain Cost: 1.6743044030666352\tTest Acc: 0.4021250003017485\tTest Cost: 1.6711951442062856\tLR: 0.0008\n",
+      "Current: 8\tTrain Acc: 0.40159999996423723\tTrain Cost: 1.6685720694065094\tTest Acc: 0.36675000097602606\tTest Cost: 1.742949016392231\tLR: 0.0008\n",
+      "Current: 9\tTrain Acc: 0.41659999907016754\tTrain Cost: 1.6253625500202178\tTest Acc: 0.3417500011622906\tTest Cost: 1.9284224800765515\tLR: 0.0008\n",
+      "Current: 10\tTrain Acc: 0.3944000019133091\tTrain Cost: 1.7360369622707368\tTest Acc: 0.37274999944493176\tTest Cost: 1.7618391059339047\tLR: 0.0008\n",
+      "Current: 11\tTrain Acc: 0.4077999992668629\tTrain Cost: 1.6631859982013701\tTest Acc: 0.3801250004209578\tTest Cost: 1.7023520171642303\tLR: 0.0008\n",
+      "Current Iter : 12/30 batch : 700/5000 acc : 0.4 cost : 1.51474158\r"
+     ]
+    }
+   ],
    "source": [
     "# start the training \n",
     "for iter in range(1,num_epoch+1):\n",
