Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -625,9 +625,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-06-18T02:50:35.098Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# see \n",
+    "temp = tf.random_normal([3,5],stddev=1,seed=4)\n",
+    "\n",
+    "temp_pos      = tf.where(temp>0,tf.ones_like(temp),tf.zeros_like(temp))\n",
+    "temp_pos_mean = tf.reduce_sum(temp_pos*temp)/tf.reduce_sum(temp_pos)\n",
+    "\n",
+    "temp_neg      = tf.where(temp<0,tf.ones_like(temp),tf.zeros_like(temp))\n",
+    "temp_neg_mean = tf.reduce_sum(temp_neg*temp)/tf.reduce_sum(temp_neg)\n",
+    "\n",
+    "temp_between  = tf.where(temp_neg_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp_pos_mean>temp,tf.ones_like(temp),tf.zeros_like(temp)) \n",
+    "\n",
+    "temp1 = temp_between * temp\n",
+    "temp2 = (1-temp_between) * temp\n",
+    "\n",
+    "all_of_data = sess.run([temp,\n",
+    "                        temp_pos,temp_pos_mean,\n",
+    "                        temp_neg,temp_neg_mean,temp1,temp2])\n",
+    "\n",
+    "print(all_of_data[0])\n",
+    "\n",
+    "print(all_of_data[1])\n",
+    "print(all_of_data[2])\n",
+    "print(all_of_data[3])\n",
+    "\n",
+    "print(all_of_data[4])\n",
+    "print(all_of_data[5])\n",
+    "print(all_of_data[6])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
