Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -624,13 +624,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T02:50:35.098Z"
+     "end_time": "2019-06-18T02:51:02.044877Z",
+     "start_time": "2019-06-18T02:51:01.872340Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.9791961   1.3355689  -0.5717732   1.6240884   0.5671745 ]\n",
+      " [ 0.3059743   0.3729131  -0.03954097 -0.54076743  0.5313867 ]\n",
+      " [-0.06803644 -0.9141885  -0.3489719  -0.08251325 -0.4754392 ]]\n",
+      "[[0. 0. 0. 0. 1.]\n",
+      " [1. 1. 1. 0. 1.]\n",
+      " [1. 0. 1. 1. 0.]]\n",
+      "[[-0.          0.         -0.          0.          0.5671745 ]\n",
+      " [ 0.3059743   0.3729131  -0.03954097 -0.          0.5313867 ]\n",
+      " [-0.06803644 -0.         -0.3489719  -0.08251325 -0.        ]]\n",
+      "[[-0.9791961   1.3355689  -0.5717732   1.6240884   0.        ]\n",
+      " [ 0.          0.         -0.         -0.54076743  0.        ]\n",
+      " [-0.         -0.9141885  -0.         -0.         -0.4754392 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# see \n",
     "temp = tf.random_normal([3,5],stddev=1,seed=4)\n",
@@ -646,19 +666,12 @@
     "temp1 = temp_between * temp\n",
     "temp2 = (1-temp_between) * temp\n",
     "\n",
-    "all_of_data = sess.run([temp,\n",
-    "                        temp_pos,temp_pos_mean,\n",
-    "                        temp_neg,temp_neg_mean,temp1,temp2])\n",
+    "all_of_data = sess.run([temp,temp_between,temp1,temp2])\n",
     "\n",
     "print(all_of_data[0])\n",
-    "\n",
     "print(all_of_data[1])\n",
     "print(all_of_data[2])\n",
     "print(all_of_data[3])\n",
-    "\n",
-    "print(all_of_data[4])\n",
-    "print(all_of_data[5])\n",
-    "print(all_of_data[6])\n",
     "\n",
     "\n",
     "\n",
