Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -624,11 +624,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 148,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T02:51:02.044877Z",
-     "start_time": "2019-06-18T02:51:01.872340Z"
+     "end_time": "2019-06-18T02:53:08.414717Z",
+     "start_time": "2019-06-18T02:53:08.223727Z"
     }
    },
    "outputs": [
@@ -636,30 +636,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(2, 1)\n",
       "[[-0.9791961   1.3355689  -0.5717732   1.6240884   0.5671745 ]\n",
-      " [ 0.3059743   0.3729131  -0.03954097 -0.54076743  0.5313867 ]\n",
-      " [-0.06803644 -0.9141885  -0.3489719  -0.08251325 -0.4754392 ]]\n",
-      "[[0. 0. 0. 0. 1.]\n",
-      " [1. 1. 1. 0. 1.]\n",
-      " [1. 0. 1. 1. 0.]]\n",
-      "[[-0.          0.         -0.          0.          0.5671745 ]\n",
-      " [ 0.3059743   0.3729131  -0.03954097 -0.          0.5313867 ]\n",
-      " [-0.06803644 -0.         -0.3489719  -0.08251325 -0.        ]]\n",
-      "[[-0.9791961   1.3355689  -0.5717732   1.6240884   0.        ]\n",
-      " [ 0.          0.         -0.         -0.54076743  0.        ]\n",
-      " [-0.         -0.9141885  -0.         -0.         -0.4754392 ]]\n"
+      " [ 0.3059743   0.3729131  -0.03954097 -0.54076743  0.5313867 ]]\n",
+      "\n",
+      "[[0. 0. 1. 0. 1.]\n",
+      " [1. 1. 1. 0. 0.]]\n",
+      "\n",
+      "[[-0.          0.         -0.5717732   0.          0.5671745 ]\n",
+      " [ 0.3059743   0.3729131  -0.03954097 -0.          0.        ]]\n",
+      "\n",
+      "[[-0.9791961   1.3355689  -0.          1.6240884   0.        ]\n",
+      " [ 0.          0.         -0.         -0.54076743  0.5313867 ]]\n"
      ]
     }
    ],
    "source": [
     "# see \n",
-    "temp = tf.random_normal([3,5],stddev=1,seed=4)\n",
+    "temp = tf.random_normal([2,5],stddev=1,seed=4)\n",
     "\n",
     "temp_pos      = tf.where(temp>0,tf.ones_like(temp),tf.zeros_like(temp))\n",
-    "temp_pos_mean = tf.reduce_sum(temp_pos*temp)/tf.reduce_sum(temp_pos)\n",
+    "temp_pos_mean = tf.reduce_sum(temp_pos*temp,1,keepdims=True)/tf.reduce_sum(temp_pos,1,keepdims=True)\n",
+    "\n",
+    "print(\n",
+    "tf.reduce_sum(temp_pos*temp,1,keepdims=True).shape\n",
+    ")\n",
     "\n",
     "temp_neg      = tf.where(temp<0,tf.ones_like(temp),tf.zeros_like(temp))\n",
-    "temp_neg_mean = tf.reduce_sum(temp_neg*temp)/tf.reduce_sum(temp_neg)\n",
+    "temp_neg_mean = tf.reduce_sum(temp_neg*temp,1,keepdims=True)/tf.reduce_sum(temp_neg,1,keepdims=True)\n",
     "\n",
     "temp_between  = tf.where(temp_neg_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp_pos_mean>temp,tf.ones_like(temp),tf.zeros_like(temp)) \n",
     "\n",
@@ -669,8 +673,11 @@
     "all_of_data = sess.run([temp,temp_between,temp1,temp2])\n",
     "\n",
     "print(all_of_data[0])\n",
+    "print()\n",
     "print(all_of_data[1])\n",
+    "print()\n",
     "print(all_of_data[2])\n",
+    "print()\n",
     "print(all_of_data[3])\n",
     "\n",
     "\n",
