Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -141,12 +141,12 @@
     "            strides=[1,self.stride,self.stride,1],padding=self.padding\n",
     "        )\n",
     "\n",
-    "        \n",
+    "        dimension_shape = (1)\n",
     "        grad_pos      = tf.where(grad>0,tf.ones_like(grad),tf.zeros_like(grad))\n",
-    "        grad_pos_mean = tf.reduce_sum(grad_pos*grad)/tf.reduce_sum(grad_pos)\n",
+    "        grad_pos_mean = tf.reduce_sum(grad_pos*grad,dimension_shape,keepdims=True)/tf.reduce_sum(grad_pos,dimension_shape,keepdims=True)\n",
     "        \n",
     "        grad_neg      = tf.where(grad<0,tf.ones_like(grad),tf.zeros_like(grad))\n",
-    "        grad_neg_mean = tf.reduce_sum(grad_neg*grad)/tf.reduce_sum(grad_neg)\n",
+    "        grad_neg_mean = tf.reduce_sum(grad_neg*grad,dimension_shape,keepdims=True)/tf.reduce_sum(grad_neg,dimension_shape,keepdims=True)\n",
     "        \n",
     "        grad_between    = tf.where(grad_neg_mean<grad,tf.ones_like(grad),tf.zeros_like(grad)) * tf.where(grad_pos_mean>grad,tf.ones_like(grad),tf.zeros_like(grad))\n",
     "        grad_sign_chage = grad_between     * grad *  1\n",
@@ -624,11 +624,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 149,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T02:53:08.414717Z",
-     "start_time": "2019-06-18T02:53:08.223727Z"
+     "end_time": "2019-06-18T02:56:34.173614Z",
+     "start_time": "2019-06-18T02:56:33.970944Z"
     }
    },
    "outputs": [
@@ -655,15 +655,16 @@
     "# see \n",
     "temp = tf.random_normal([2,5],stddev=1,seed=4)\n",
     "\n",
+    "dimension_shape = (1)\n",
     "temp_pos      = tf.where(temp>0,tf.ones_like(temp),tf.zeros_like(temp))\n",
-    "temp_pos_mean = tf.reduce_sum(temp_pos*temp,1,keepdims=True)/tf.reduce_sum(temp_pos,1,keepdims=True)\n",
+    "temp_pos_mean = tf.reduce_sum(temp_pos*temp,dimension_shape,keepdims=True)/tf.reduce_sum(temp_pos,dimension_shape,keepdims=True)\n",
     "\n",
     "print(\n",
     "tf.reduce_sum(temp_pos*temp,1,keepdims=True).shape\n",
     ")\n",
     "\n",
     "temp_neg      = tf.where(temp<0,tf.ones_like(temp),tf.zeros_like(temp))\n",
-    "temp_neg_mean = tf.reduce_sum(temp_neg*temp,1,keepdims=True)/tf.reduce_sum(temp_neg,1,keepdims=True)\n",
+    "temp_neg_mean = tf.reduce_sum(temp_neg*temp,dimension_shape,keepdims=True)/tf.reduce_sum(temp_neg,dimension_shape,keepdims=True)\n",
     "\n",
     "temp_between  = tf.where(temp_neg_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp_pos_mean>temp,tf.ones_like(temp),tf.zeros_like(temp)) \n",
     "\n",
