Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -416,7 +416,8 @@
       "Current: 8\tTrain Acc: 0.5698000055551529\tTrain Cost: 1.2126802217960357\tTest Acc: 0.4756250001490116\tTest Cost: 1.4496647737920285\tLR: 0.0008\n",
       "Current: 9\tTrain Acc: 0.5818000030517578\tTrain Cost: 1.1846365803480148\tTest Acc: 0.5215000005438923\tTest Cost: 1.3268100142478942\tLR: 0.0008\n",
       "Current: 10\tTrain Acc: 0.5963999983668328\tTrain Cost: 1.1119657444953919\tTest Acc: 0.5308749984949828\tTest Cost: 1.3143324837088586\tLR: 0.0008\n",
-      "Current Iter : 11/30 batch : 1300/5000 acc : 0.6 cost : 1.00636775\r"
+      "Current: 11\tTrain Acc: 0.614200002849102\tTrain Cost: 1.0911799138784408\tTest Acc: 0.5136249987408519\tTest Cost: 1.3677414175122977\tLR: 0.0008\n",
+      "Current Iter : 12/30 batch : 3950/5000 acc : 0.54 cost : 1.12978174\r"
      ]
     }
    ],
